# elm-browser

./: Makefile.am  ProjectHome.md  autogen.sh  configure  configure.ac
resources/: browser.edj
src/: Makefile.am.bak  Makefile.in  callbacks.c  callbacks.h  dbsqlite.c  dbsqlite.h  dbus-stuff.c  gui.c  gui.h  main.c
src/.deps/: callbacks.Po  gui.Po  main.Po
trunk/: AUTHORS  configure  configure.ac
trunk/resources/: browser.desktop  ventura.desktop  ventura.edj
trunk/src/: Makefile  Makefile.am  callbacks.c  callbacks.h  dbsqlite.c  dbsqlite.h  dbus-stuff.h  default.edj  gui.c  gui.h  main.c
